gateway.yaml
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
 name: kong
 namespace: kong-gateway
 annotations:
   konghq.com/gatewayclass-unmanaged: 'true'
spec:
 controllerName: konghq.com/kic-gateway-controller
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
 name: kong
 namespace: kong-gateway
spec:
 gatewayClassName: kong
 listeners:
 - name: http
   protocol: HTTP
   port: 80
   allowedRoutes:
     namespaces:
       from: Selector
       selector:
         matchExpressions:
           - key: kubernetes.io/metadata.name
             operator: In
             values: [application-01, application-02]
